<resources>
    <string name="app_name">FirebaseSenati</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="iniciar_registry">Registrarme</string>
    <string name="username">Usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repita su contraseña</string>
    <string name="save_registry">Registrar</string>
    <string name="menu_close">Cerrar sesión</string>
    <string name="login_app">Login</string>
</resources>